:tada: feat: add reto3

--- a/grilla2.html
+++ b/grilla2.html
@@ -13,14 +13,14 @@
 <body>
     <h1>Reto 2</h1>
    <div class="container">
-    <div class="row text-center">
+    <div class="row">
 
-        <div class="col col-md-3 col-lg-3 box2">Fila 1/Col1</div>
-        <div class="col col-md-3 col-lg-3 box2">Fila 1/Col2</div>
-        <div class="col col-md-3 col-lg-3 box2">Fila 1/Col3</div>
-        <div class="col col-md-3 col-lg-3 box2">Fila 1/Col4</div>
+        <div class="col-6 col-sm-6 col-md-3 col-lg-3 box2">Fila 1/Col1</div>
+        <div class="col-6 col-sm-6 col-md-3 col-lg-3 box2">Fila 1/Col2</div>
+        <div class="col-6 col-sm-6 col-md-3 col-lg-3 box2">Fila 1/Col3</div>
+        <div class="col-6 col-sm-6 col-md-3 col-lg-3 box2">Fila 1/Col4</div>
     </div>
-    <div class="row text-center">
+    <div class="row">
         <div class="col-12 col-sm-12 col-md-6 col-lg box2">Fila 2 /Col1</div>
         <div class="col-12 col-sm-12 col-md-6 col-lg box2">Fila 2 /Col2</div>
         <div class="col-12 col-sm-12 col-md-6 col-lg box2">Fila 2 /Col3</div>
